// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render empty CardCollection 1`] = `
Array [
  <button
    class="button icon addButton"
    type="button"
  >
    <span
      aria-label="su-plus"
      class="su-plus buttonIcon"
    />
  </button>,
  <section />,
]
`;

exports[`Render passed card components 1`] = `
Array [
  <button
    class="button icon addButton"
    type="button"
  >
    <span
      aria-label="su-plus"
      class="su-plus buttonIcon"
    />
  </button>,
  <section>
    <div
      class="card"
    >
      <section
        class="card"
      >
        <div
          class="icons"
        />
        <h1>
          Content 1
        </h1>
      </section>
    </div>
    <div
      class="card"
    >
      <section
        class="card"
      >
        <div
          class="icons"
        />
        <h2>
          Content 2
        </h2>
      </section>
    </div>
  </section>,
]
`;
